--- a/style.css
+++ b/style.css
@@ -34,6 +34,17 @@ body {
 	font-size: 1em;
 }
 
+ul {
+	list-style: none;
+}
+ul li {
+	margin: 5px 0;
+}
+ul li:before {
+	font-weight: bold;
+	content: "\0023\00A0";
+}
+
 a {
 	cursor: pointer;
 	color: #333;
@@ -44,11 +55,65 @@ a {
 a:hover {
 	text-decoration: underline;
 }
-
+hr {
+	border: solid 2px #333;
+	margin: 10px 0;
+}
 h1, h2, h3, h4, p {
 	margin: 5px 0;
 }
+.center {
+	text-align: center;
+}
+/*Input*/
+input::-webkit-input-placeholder {
+	color: #555;
+}
+input, select, textarea, button {
+	width: 100%;
+	height: 50px;
+	outline: none;
+	padding-left: 10px;
+	border-radius: 5px;
+	border: solid 1px rgba(0,0,0,0.3);
+	/*background-color: rgba(237,163,16, 0.6);*/
+	background-color: white;
+	font-size: 14pt;
+	font-family: Arial;
+	transition: .2s;
+}
+textarea {
+	padding: 10px;
+	min-height: 100px;
+}
+button {
+	padding: 0;
+	background-color: #333;
+	color: white;
+	cursor: pointer;
+	border: none;
+}
+button:hover { background-color:  #222; }
+button:active { background-color:  #111; }
 
+/*Div*/
+div.part {
+	margin: 10px 0;
+}
+div.part input, div.part select{
+	width: 69%;
+	margin-right: 1%;
+}
+div.part button {
+	width: 28%;
+}
+div.part.row {
+	display: flex;
+	justify-content: space-between;
+}
+div.part.row button {
+	width: 48%;
+}
 div.row {
 	display: flex;
 	justify-content: space-between;
@@ -56,6 +121,7 @@ div.row {
 }
 div.point {
 	background-color: #333;
+	font-size: 14pt;
 	width: 100%;
 	height: 100%;
 	border-radius: 5px;
@@ -65,13 +131,31 @@ div.point {
 	justify-content: center;
 	align-items: center;
 	color: white;
-	font-family: "trebuchet ms";
+	/*font-family: "trebuchet ms";*/
 }
 div.point:hover { background-color: #222; }
 div.point:active { background-color: #111; }
 .button {
 	margin: 10px 0;
 	height: 50px !important;
+}
+div.wrap {
+	margin: 10px 0;
+	border-radius:5px;
+	padding:20px;
+	background-color: rgba(255,255,255,0.5);
+}
+fieldset {
+	margin: 10px 0;
+	border-radius:5px;
+	padding: 20px;
+	border: none;
+	background-color: rgba(255,255,255,0.5);
+}
+fieldset legend {
+	text-align: center;
+	font-size: 24pt;
+	font-weight: bold;
 }
 
 /*App*/
@@ -139,10 +223,10 @@ div.app div.bar div.right div.bottom div.cell {
 	border-bottom: dashed 1px #333;
 }
 div.app div.bar div.right div.bottom div.cell:hover {
-	background-color: #f3f3f3;
+	background-color: #d3d3d3;
 }
 div.app div.bar div.right div.bottom div.cell:active {
-	background-color: #e3e3e3;
+	background-color: #b3b3b3;
 }
 
 /*Mask*/
@@ -159,6 +243,7 @@ div#mask {
 
 /*Menu*/
 div#menu {
+	font-size: 14pt;
 	display: flex;
 	position: absolute;
 	top: 0;
@@ -171,6 +256,7 @@ div#menu div.main, div#menu div.side {
 	width: 0px;
 	transition: .2s;
 	overflow: hidden;
+	overflow-y: auto;
 	background-color: #eda310;
 }
 
@@ -179,4 +265,5 @@ div#menu div.side {
 	transition: .4s;
 }
 
-div#menu div.side div { display: none; }
+div#menu div.side > div { display: none; }
+div#menu div.side > div#close { display: flex; }
